samples/_failures_safe/1761151292_8ea507_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2ff2759.c: In function ‘main’:
./samples/SAFE/__tmp_e2ff2759.c:152:16: error: missing terminating " character
  152 |         printf("2. Add matrices (A
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e2ff2759.c:152:9: error: expected expression at end of input
  152 |         printf("2. Add matrices (A
      |         ^~~~~~
./samples/SAFE/__tmp_e2ff2759.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2ff2759.c:152:9: error: expected declaration or statement at end of input
